# openthread

src/core/crypto/: storage.hpp
src/core/meshcop/: secure_transport.cpp  tcat_agent.cpp
src/core/thread/: mle.cpp
tools/tcat_ble_client/: .gitignore  README.md  bbtc.py  pyproject.toml  requirements.txt
tools/tcat_ble_client/ble/: ble_scanner.py  ble_stream.py
tools/tcat_ble_client/cli/: tlv_commands.py
