[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bbtc"
description = "Bluetooth-Based Thread Commisioning client for TCAT devices"
version = "0.1.0"
readme = "README.md"
authors = [
    {name = "Piotr Jasinski", email = "piotr.jasinski@nordicsemi.no"},
]
maintainers = [
    {name = "Przemysław Bida", email = "przemyslaw.bida@nordicsemi.no"},
    {name = "Jakub Uliarczyk", email = "jakub.uliarczyk@nordicsemi.no"}
]
classifiers = [
    "Programming Language :: Python"
]
requires-python = ">=3.12.4"
dependencies = [
    "bleak==0.22.3",
    "cryptography==43.0.1"
]
